--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
+  color: black;
+  background-color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App_Dark {
   min-height: 100vh;
+  color: rgb(252, 249, 249);
+  background-color: rgb(5, 5, 5);
+}
+.head_grid {
+  height: 9vh;
+  padding-top: 12vh;
+  border-bottom: 2px solid #d1b1d4;
+  display: grid;
+  place-items: center;
+}
+.body_grid {
+  overflow-x: hidden;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+}
+.body_grid::-webkit-scrollbar {
+  display: none;
+}
+.body {
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head {
+  padding-top: 12vh;
+  display: grid;
+  place-items: center;
+  border-bottom: 2px solid #d1b1d4;
 }
